<resources>
    <string name="app_name">Практическая работа 9</string>
    <string name="show_results">Показать результаты</string>
    <string name="phone_number">8–954–852–00–00</string>
    <string name="choose_your_direction">Выберите ваше направление</string>
    <string name="choose_one_category">Выберите одну категорию</string>
    <string name="psychology">Психология</string>
    <string name="business">Бизнес</string>
    <string name="school">Школа</string>
    <string name="relationship">Отношения</string>
    <string name="submit_order">Заказать</string>
    <string name="to_website">На сайт</string>
    <string name="enter_your_name">Введите свое имя</string>
    <string name="enter_your_phone_number">Введите свой номер телефона</string>
    <string name="delivery">Доставка</string>
    <string name="courier">Курьер</string>
    <string name="self_pickup">Самовывоз</string>
    <string name="price">890</string>
    <string name="roubles">рублей</string>
    <string name="book_title">Томас Маак, Никола Плесс \"Ответственное лидерство\"</string>
    <string name="your_choice">Ваш выбор</string>
    <string name="menu">Меню</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="instagram">Instagram</string>
</resources>