<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="17dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/twitter"
            android:src="@drawable/premium_icon_twitter_4494477"
            android:padding="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:contentDescription="@string/facebook"
            android:src="@drawable/premium_icon_facebook_4494475"
            android:padding="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:contentDescription="@string/whatsapp"
            android:src="@drawable/premium_icon_whatsapp_4494494"
            android:padding="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:contentDescription="@string/instagram"
            android:src="@drawable/premium_icon_instagram_4494488"
            android:padding="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"/>
    </LinearLayout>

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="51dp"
        android:text="@string/phone_number"
        android:theme="@style/PhoneNumber"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/toWebsiteButton"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="55dp"
        android:text="@string/show_results"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/Button"
        android:insetTop="0dp"
        android:insetBottom="0dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/toWebsiteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen_desc">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/labelTopLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/psychology"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radioTopLeft"
                        app:layout_constraintTop_toBottomOf="@+id/imageTopLeft" />

                    <ImageView
                        android:id="@+id/imageTopLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/psychology"
                        app:layout_constraintBottom_toTopOf="@+id/labelTopLeft"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radioTopLeft"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:layout_constraintVertical_chainStyle="packed"
                        android:src="@drawable/image_5" />

                    <RadioButton
                        android:id="@+id/radioTopLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Radio"
                        android:checked="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/labelTopRight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/business"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radioTopRight"
                        app:layout_constraintTop_toBottomOf="@+id/imageTopRight" />

                    <ImageView
                        android:id="@+id/imageTopRight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/business"
                        app:layout_constraintBottom_toTopOf="@+id/labelTopRight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radioTopRight"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:layout_constraintVertical_chainStyle="packed"
                        android:src="@drawable/image_3" />

                    <RadioButton
                        android:id="@+id/radioTopRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Radio"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/labelBottomLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/school"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radioBottomLeft"
                        app:layout_constraintTop_toBottomOf="@+id/imageBottomLeft" />

                    <ImageView
                        android:id="@+id/imageBottomLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/school"
                        app:layout_constraintBottom_toTopOf="@+id/labelBottomLeft"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radioBottomLeft"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:layout_constraintVertical_chainStyle="packed"
                        android:src="@drawable/image_4" />

                    <RadioButton
                        android:id="@+id/radioBottomLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Radio"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/labelBottomRight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/relationship"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radioBottomRight"
                        app:layout_constraintTop_toBottomOf="@+id/imageBottomRight" />

                    <ImageView
                        android:id="@+id/imageBottomRight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/relationship"
                        app:layout_constraintBottom_toTopOf="@+id/labelBottomRight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radioBottomRight"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:layout_constraintVertical_chainStyle="packed"
                        android:src="@drawable/image_6" />

                    <RadioButton
                        android:id="@+id/radioBottomRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Radio"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/screen_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_one_category"
        android:theme="@style/TitleDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen_title" />

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:text="@string/choose_your_direction"
        android:theme="@style/TitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/hamburger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/menu"
        android:padding="10dp"
        android:src="@drawable/ic_vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>